--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
         run: pip install -r requirements.txt
       - name: Install Dev Dependencies
         run: pip install -r requirements-dev.txt
+      - name: Add Project to PYTHONPATH
+        run: export PYTHONPATH=$PYTHONPATH:`pwd`
       - name: Run Tests
         run: pytest tests
 
