--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,17 +9,27 @@ on:
 jobs:
   run-tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-      - name: Install Dependencies
-        run: pip install -r requirements.txt
-      - name: Install Dev Dependencies
-        run: pip install -r requirements-dev.txt
-      - name: Add Project to PYTHONPATH
-        run: export PYTHONPATH=$PYTHONPATH:`pwd`
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+      - name: Analysing the code with pylint
+        run: |
+          pylint $(git ls-files '*.py')
       - name: Run Tests
-        run: pytest tests
+        run: PYTHONPATH=`pwd` pytest tests
 
   scan-security:
     runs-on: ubuntu-latest
