--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,11 @@ jobs:
         uses: aquasecurity/trivy-action@0.28.0
         with:
           scan-type: "fs"
+          format: 'table'
+          exit-code: '1'
           ignore-unfixed: true
-          format: "sarif"
-          output: "trivy-results.sarif"
-          severity: "CRITICAL"
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
 
   build:
     runs-on: ubuntu-20.04
@@ -48,10 +49,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Build an image from Dockerfile
         run: |
-          docker build -t docker.io/my-organization/my-app:${{ github.sha }} .
+          docker build -t ducminhgd/hotel-take-home:${{ github.sha }} .
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: "docker.io/my-organization/my-app:${{ github.sha }}"
-          format: "sarif"
-          output: "trivy-results.sarif"
+          image-ref: "ducminhgd/hotel-take-home:${{ github.sha }}"
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
